New workout dialog, change fragments and action bar from support to regular

--- a/app/src/main/res/layout/fragment_user_routine.xml
+++ b/app/src/main/res/layout/fragment_user_routine.xml
@@ -9,4 +9,12 @@
         android:id="@+id/routine_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <!--<com.shamanland.fab.FloatingActionButton
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:src="@drawable/ic_action_edit"
+    app:floatingActionButtonColor="@color/colorAccent"
+    app:floatingActionButtonSize="normal"
+    />-->
 </FrameLayout>
