--- a/app/src/main/res/menu/user_routine.xml
+++ b/app/src/main/res/menu/user_routine.xml
@@ -4,7 +4,7 @@
 
     <item android:id="@+id/action_edit_routine"
         android:title="@string/action_edit_routine"
-        android:icon="@drawable/"
+        android:icon="@drawable/ic_action_edit"
         android:orderInCategory="100"
         android:showAsAction="ifRoom" />
 </menu>
