--- a/app/src/main/res/layout/activity_track_workout.xml
+++ b/app/src/main/res/layout/activity_track_workout.xml
@@ -1,25 +1,13 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    >
-    <!-- A CardView that contains a TextView -->
-<android.support.v7.widget.CardView
-xmlns:card_view="http://schemas.android.com/apk/res-auto"
-android:id="@+id/card_view"
-android:layout_gravity="center"
-android:layout_width="match_parent"
-android:layout_height="200dp"
-card_view:cardCornerRadius="4dp">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-<TextView
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/track_workout_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-    android:id="@+id/info_text"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:autoText="false"
-    android:text="check" />
-</android.support.v7.widget.CardView>
-    </LinearLayout>
+</FrameLayout>
