--- a/app/src/main/res/layout/fragment_track_session.xml
+++ b/app/src/main/res/layout/fragment_track_session.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="190dp"
+        android:layout_height="wrap_content"
         android:id="@+id/last_workout_info"
         android:orientation="vertical">
 
@@ -36,7 +36,7 @@
         android:orientation="vertical"
 
         android:layout_width="match_parent"
-        android:layout_height="190dp"
+        android:layout_height="wrap_content"
 
         android:id="@+id/current_workout_info">
 
@@ -69,11 +69,10 @@
         android:gravity="center"
         >
         <TextView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:text="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="reps:"
             android:textSize="16sp"
-            android:background="@drawable/circle"
             android:gravity="center"/>
 
         <EditText
