--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -49,7 +49,8 @@
         android:text="chest, biceps"
         android:id="@+id/muscles"
         android:layout_below="@+id/textView5"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="10dp"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -57,5 +58,6 @@
         android:text="+ Add to workout"
         android:id="@+id/add_to_workout"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        />
 </RelativeLayout>
