--- a/app/src/main/res/layout/fragment_edit_workout.xml
+++ b/app/src/main/res/layout/fragment_edit_workout.xml
@@ -1,13 +1,79 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+
+<android.support.v7.widget.CardView
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    android:id="@+id/card_view"
+
+    android:layout_margin="60dp"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sqvat.squat.EditWorkoutFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+
+    card_view:cardElevation="3dp"
+    card_view:cardCornerRadius="2dp">
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="vertical"
+
+            android:id="@+id/workout_header"
+
+            android:background="@color/colorPrimary">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                style="@style/card_header"
+                android:textSize="24sp"
+
+                android:text="Workout A"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                style="@style/card_header"
+                android:textSize="18sp"
+
+                android:text="5 exercises \u2022 20 sets"/>
+        </LinearLayout>
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:id="@+id/sessions_list"
+
+            android:layout_below="@id/workout_header"></ListView>
+
+        <com.shamanland.fab.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_action_workout_now"
+            android:layout_alignParentRight="true"
+            android:layout_alignBottom="@id/workout_header"
+            android:layout_marginBottom="-32dp"
+            android:layout_marginRight="20dp"
+            app:floatingActionButtonColor="@color/colorAccent"
+
+            android:id="@+id/add_exercise"
+            />
+
+
+    </RelativeLayout>
+
+
+
+
+</android.support.v7.widget.CardView>
