--- a/app/src/main/res/layout/fragment_edit_workout.xml
+++ b/app/src/main/res/layout/fragment_edit_workout.xml
@@ -1,79 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v7.widget.CardView
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-
-    android:id="@+id/card_view"
-
-    android:layout_margin="60dp"
-
-    android:layout_width="match_parent"
+<FrameLayout
     android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent">
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
 
+        android:id="@+id/card_view"
 
+        android:layout_margin="11dp"
 
-    card_view:cardElevation="3dp"
-    card_view:cardCornerRadius="2dp">
-
-    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
 
-        <LinearLayout
+
+
+        card_view:cardElevation="4dp"
+        card_view:cardCornerRadius="3dp">
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:orientation="vertical"
+            android:layout_height="match_parent">
 
-            android:id="@+id/workout_header"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:orientation="vertical"
 
-            android:background="@color/colorPrimary">
 
-            <TextView
+
+                android:id="@+id/workout_header"
+
+                android:background="@color/colorPrimary"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    style="@style/card_header"
+                    android:textSize="24sp"
+
+                    android:text="Workout A"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    style="@style/card_header"
+                    android:textSize="18sp"
+
+                    android:text="5 exercises \u2022 20 sets"/>
+            </LinearLayout>
+
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:id="@+id/edit_sessions_list"
+
+                android:layout_below="@id/workout_header"></ListView>
+
+            <com.shamanland.fab.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:src="@drawable/ic_action_add"
+                android:layout_alignParentRight="true"
+                android:layout_alignBottom="@id/workout_header"
+                android:layout_marginBottom="-32dp"
+                android:layout_marginRight="20dp"
+                app:floatingActionButtonColor="@color/colorAccent"
 
-                style="@style/card_header"
-                android:textSize="24sp"
-
-                android:text="Workout A"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                style="@style/card_header"
-                android:textSize="18sp"
-
-                android:text="5 exercises \u2022 20 sets"/>
-        </LinearLayout>
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-
-            android:id="@+id/sessions_list"
-
-            android:layout_below="@id/workout_header"></ListView>
-
-        <com.shamanland.fab.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_action_workout_now"
-            android:layout_alignParentRight="true"
-            android:layout_alignBottom="@id/workout_header"
-            android:layout_marginBottom="-32dp"
-            android:layout_marginRight="20dp"
-            app:floatingActionButtonColor="@color/colorAccent"
-
-            android:id="@+id/add_exercise"
-            />
+                android:id="@+id/add_exercise"
+                />
 
 
-    </RelativeLayout>
+        </RelativeLayout>
 
 
 
 
-</android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>
+</FrameLayout>
