--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<FrameLayout
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent">
 <android.support.v7.widget.CardView
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -7,15 +10,15 @@
 
     android:id="@+id/card_view"
 
-    android:layout_margin="60dp"
+    android:layout_margin="11dp"
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
 
 
-    card_view:cardElevation="3dp"
-    card_view:cardCornerRadius="2dp">
+    card_view:cardElevation="4dp"
+    card_view:cardCornerRadius="3dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -23,12 +26,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="80dp"
             android:orientation="vertical"
+
 
             android:id="@+id/workout_header"
 
-            android:background="@color/colorPrimary">
+            android:background="@color/colorPrimary"
+            android:gravity="center_vertical">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -66,8 +71,10 @@
             android:layout_marginBottom="-32dp"
             android:layout_marginRight="20dp"
             app:floatingActionButtonColor="@color/colorAccent"
+            app:floatingActionButtonSize="normal"
 
             android:id="@+id/workout_now"
+
             />
 
 
@@ -77,3 +84,4 @@
 
 
 </android.support.v7.widget.CardView>
+    </FrameLayout>
