--- a/app/src/main/res/layout/config_set_li.xml
+++ b/app/src/main/res/layout/config_set_li.xml
@@ -8,7 +8,8 @@
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    >
 
     <TextView
         android:layout_width="wrap_content"
@@ -47,6 +48,17 @@
         android:id="@+id/duplicate_btn"
         android:drawableLeft="@drawable/ic_action_copy"
         android:layout_gravity="right"/>
+
+    <!--<com.triggertrap.seekarc.SeekArc-->
+        <!--android:id="@+id/seekArc"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:padding="30dp"-->
+        <!--seekarc:rotation="180"-->
+        <!--seekarc:startAngle="30"-->
+        <!--seekarc:sweepAngle="300"-->
+        <!--seekarc:touchInside="true" />-->
 
 
 </LinearLayout>
