--- a/app/src/main/res/layout/activity_config_session.xml
+++ b/app/src/main/res/layout/activity_config_session.xml
@@ -1,6 +1,35 @@
-<RelativeLayout
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:gravity="center_horizontal">
 
-</RelativeLayout>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:paddingTop="5dp"
+        android:hint="Sets"
+        android:id="@+id/configSetsEt"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:paddingTop="5dp"
+        android:hint="Reps"
+        android:id="@+id/configRepsEt"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:paddingTop="5dp"
+        android:hint="Rest Between Sets"
+        android:id="@+id/configRestEt"/>
+
+
+
+
+</LinearLayout>
