--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sqvat.squat.TimerFragment">
+    tools:context="com.sqvat.squat.fragments.TimerFragment">
 
     <TextView
         android:layout_width="wrap_content"
