--- a/app/src/main/res/layout/fragment_track_session.xml
+++ b/app/src/main/res/layout/fragment_track_session.xml
@@ -97,7 +97,7 @@
             android:layout_height="match_parent"
 
             android:id="@+id/log_set"
-            class="com.sqvat.squat.LogSetFragment"
+            class="com.sqvat.squat.fragments.LogSetFragment"
             tools:layout="@layout/fragment_log_set"></fragment>
     </android.support.v7.widget.CardView>
 
