--- a/app/src/main/res/menu/config_session.xml
+++ b/app/src/main/res/menu/config_session.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.sqvat.squat.ConfigSessionActivity" >
+    tools:context="com.sqvat.squat.activities.ConfigSessionActivity" >
     <item android:id="@+id/action_save"
         android:title="save"
         android:orderInCategory="100"
