--- a/app/src/main/res/menu/exercise.xml
+++ b/app/src/main/res/menu/exercise.xml
@@ -1,4 +1,4 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.sqvat.squat.ExerciseActivity" >
+    tools:context="com.sqvat.squat.activities.ExerciseActivity" >
 </menu>
