--- a/app/src/main/res/menu/track_workut.xml
+++ b/app/src/main/res/menu/track_workut.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.sqvat.squat.TrackWorkoutAct" >
+    tools:context="com.sqvat.squat.activities.TrackWorkoutAct" >
 
     <item android:id="@+id/action_finish_track"
         android:title="finish"
