--- a/app/src/main/res/layout/fragment_track_session.xml
+++ b/app/src/main/res/layout/fragment_track_session.xml
@@ -92,13 +92,11 @@
         card_view:cardElevation="1dp"
         card_view:cardCornerRadius="3dp">
 
-        <fragment
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+       <FrameLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:id="@id/function_card"></FrameLayout>
 
-            android:id="@+id/log_set"
-            class="com.sqvat.squat.fragments.LogSetFragment"
-            tools:layout="@layout/fragment_log_set"></fragment>
     </android.support.v7.widget.CardView>
 
 
