--- a/app/src/main/res/layout/activity_edit_routine.xml
+++ b/app/src/main/res/layout/activity_edit_routine.xml
@@ -4,6 +4,12 @@
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <com.astuetz.PagerSlidingTabStrip
+        android:id="@+id/edit_routine_tabs"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary" />
+
     <android.support.v4.view.ViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/edit_routine_pager"
