--- a/app/src/main/res/layout/fragment_track_session.xml
+++ b/app/src/main/res/layout/fragment_track_session.xml
@@ -95,7 +95,7 @@
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
-           android:id="@id/function_card"></FrameLayout>
+           android:id="@+id/function_card"></FrameLayout>
 
     </android.support.v7.widget.CardView>
 
